Analyze Reset button (Fix #6)

--- a/virtualscanner/coms/coms_ui/templates/analyze.html
+++ b/virtualscanner/coms/coms_ui/templates/analyze.html
@@ -212,7 +212,7 @@
 
               <!--Save and reset buttons-->
               <input class="btn btn-primary btn-align-right" type="button" value="Save"/>
-              <input class="btn btn-primary btn-align-right" type="button" value="Reset"/>
+              <input id="reset-btn" class="btn btn-primary btn-align-right" type="button" value="Reset"/>
             </label>
           </form>
 
