Change coms_server_flask relative paths for template display

--- a/virtualscanner/coms/coms_ui/templates/Rx.html
+++ b/virtualscanner/coms/coms_ui/templates/Rx.html
@@ -102,9 +102,9 @@
 
         <div id="original-img-container"  class="container rx-container">
           <div class="im-title-static">Original Image</div>
-          <img id="axial" src="../static/Rx/inputs/axial.png" >
-          <img id="coronal" src="../static/Rx/inputs/coronal.png" >
-          <img id="sagittal" src="../static/Rx/inputs/sagittal.png" >
+          <img id="axial" src="../static/RF/Rx/inputs/axial.png" >
+          <img id="coronal" src="../static/RF/Rx/inputs/coronal.png" >
+          <img id="sagittal" src="../static/RF/Rx/inputs/sagittal.png" >
 
         </div>
 
