Add parameter ranges to acquire tab
Fix #11

--- a/virtualscanner/coms/coms_ui/templates/acquire.html
+++ b/virtualscanner/coms/coms_ui/templates/acquire.html
@@ -298,14 +298,14 @@
                         <div class="w-100"></div>
 
                       <label>
-                        <input id="TR" type="number" min="0" class="smallinput" name="TR">
+                        <input id="TR" type="number" min="0" max='10000' class="smallinput param-with-range" name="TR">
                       </label>
                       <label>ms</label>
 
                         <div class="w-100"></div>
 
                       <label>
-                        <input id="TE" type="number" min="0" class="smallinput" name="TE">
+                        <input id="TE" type="number" min="0" max='10000' class="smallinput param-with-range" name="TE" >
                       </label>
                       <label>ms</label>
 
@@ -319,7 +319,7 @@
                         <div class="w-100"></div>
 
                       <label>
-                        <input id="FA" min="0" max="360" type="number" class="smallinput" name="FA">
+                        <input id="FA" min="0" max="360" type="number" class="smallinput param-with-range" name="FA">
                       </label>
                       <label>deg</label>
 
@@ -366,21 +366,22 @@
                             <div class="w-100"></div>
 
                           <label>
-                            <input id="thickness" type="number" min="0" class="smallinput" name="thck" >
+                            <input id="
+                            " type="number" min="0" max="0.24" class="smallinput param-with-range" name="thck" >
                           </label>
                           <label>mm</label>
 
                             <div class="w-100"></div>
 
                           <label>
-                            <input id="slices" type="number" min="1" class="smallinput" name="slicenum">
+                            <input id="slices" type="number" min="1" max="1" class="smallinput param-with-range" name="slicenum">
                           </label>
 
                             <div class="w-100"></div>
 
                           <!-- TODO: Light gray disabled box -->
                           <label>
-                            <input id="sl-gap" type="number" min="0" class="smallinput"  name="slicegap" disabled>
+                            <input id="sl-gap" type="number" min="0" max="600" class="smallinput param-with-range"  name="slicegap" disabled>
                           </label>
                           <!-- TODO: Decide on % or mm -->
                           <!--<label>%</label>-->
@@ -437,7 +438,7 @@
                               <div class="w-100"></div>
 
                               <label>
-                                <input id="ADC-bw" type="number" min="0" class="smallest-input" name="bw">
+                                <input id="ADC-bw" type="number" min="100" max="100" class="smallest-input param-with-range" name="bw" disabled>
                               </label>
                               <label>kHz</label>
 
@@ -457,13 +458,13 @@
                                 <div class="w-100"></div>
 
                               <label>
-                                <input  id="Nx" type="number" min="0" class="smallest-input" name="Nx" >
+                                <input  id="Nx" type="number" min="0" max="15" class="smallest-input param-with-range" name="Nx" >
                               </label>
 
                                 <div class="w-100"></div>
 
                               <label>
-                                <input  id="Ny" type="number"  min="0" class="smallest-input"  name="Ny">
+                                <input  id="Ny" type="number"  min="0" max="15" class="smallest-input param-with-range"  name="Ny">
                               </label>
 
                             </div>
@@ -476,7 +477,7 @@
                                 <div class="w-100"></div>
 
                               <label>
-                                <input  id="FOVx" type="number" class="smallest-input" name="FOVx">
+                                <input  id="FOVx" type="number" min="0" max="300" class="smallest-input param-with-range" name="FOVx">
                               </label>
                               <label>mm</label>
 
