Update slice thickness ranges
Fix #13

--- a/virtualscanner/coms/coms_ui/templates/acquire.html
+++ b/virtualscanner/coms/coms_ui/templates/acquire.html
@@ -366,8 +366,8 @@
                             <div class="w-100"></div>
 
                           <label>
-                            <input id="
-                            " type="number" min="0" max="0.24" class="smallinput param-with-range" name="thck" >
+
+                            <input id="thickness" type="number" min="16" max="240" class="smallinput param-with-range" name="thck" >
                           </label>
                           <label>mm</label>
 
