--- a/virtualscanner/coms/coms_ui/templates/Rx.html
+++ b/virtualscanner/coms/coms_ui/templates/Rx.html
@@ -85,6 +85,7 @@
     </div>
     <div id="enclosingjumbo" class="jumbotron">
       <h1>Virtual MR Scanner - Advanced Mode</h1>
+      <input type="button" class="btn btn-primary feedback-btn" value="?">
       <input id="log-out" class="btn btn-primary" type="button" name="" value="Log-out" style="float:right">
       <div id="images-panel" class="jumbotron">
         <div id="signal-container"  class="container rx-container">
