Fix #34. Disable Run Exam button when no sequence is selected

--- a/virtualscanner/coms/coms_ui/templates/acquire.html
+++ b/virtualscanner/coms/coms_ui/templates/acquire.html
@@ -533,7 +533,7 @@
 
     <div id="seq-panel" class="container">
       <button id="addseq-btn" type="button" class="btn btn-primary">+</button>
-      <button type="submit" class="btn btn-primary submit-form-btn">Run Exam</button>
+      <button type="submit" class="btn btn-primary submit-form-btn" disabled>Run Exam</button>
       <!-- TODO: get panel being able to scroll down -->
       <div id="seq-history-panel" class="container">
         <div id="select-seq-sentence" >
