Issue#36. Add default email to log-in page + Clarify Subject: Numerical

--- a/virtualscanner/coms/coms_ui/templates/log_in.html
+++ b/virtualscanner/coms/coms_ui/templates/log_in.html
@@ -68,7 +68,7 @@
                 <div class="col coltype2">
 
                   <label>
-                    <input type="email" class="largeinput" name="user-name">
+                    <input type="email" class="largeinput" name="user-name" value="default@email.com">
                   </label>
                 </div>
 
