Add EMI button and structural fixes

--- a/virtualscanner/coms/coms_ui/templates/acquire.html
+++ b/virtualscanner/coms/coms_ui/templates/acquire.html
@@ -59,8 +59,8 @@
   <script src="../static/log_out_func.js"> </script>
 
   <!--Customized CSS-->
-  <link rel="stylesheet" href="{{url_for('static',filename='main_style.css')}}">
-  <link rel="stylesheet" href="{{url_for('static',filename='acquire_style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static',filename='/styles/main_style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static',filename='/styles/acquire_style.css')}}">
 
   <!--Favicon -->
   <link rel="shortcut icon"  href="{{ url_for('static', filename='favicon.ico') }}">
