--- a/virtualscanner/coms/coms_ui/templates/analyze.html
+++ b/virtualscanner/coms/coms_ui/templates/analyze.html
@@ -39,8 +39,8 @@
 
 
     <!--CSS-->
-    <link rel="stylesheet" href="{{url_for('static',filename='main_style.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='analyze_style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/styles/main_style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/styles/analyze_style.css')}}">
 
     <!--Favicon -->
     <link rel="shortcut icon"  href="{{ url_for('static', filename='favicon.ico') }}">
