--- a/virtualscanner/coms/coms_ui/templates/rx.html
+++ b/virtualscanner/coms/coms_ui/templates/rx.html
@@ -31,9 +31,9 @@
     <script src="../static/log_out_func.js"> </script>
 
     <!--CSS-->
-    <link rel="stylesheet" href="../static/main_style.css">
-    <link rel="stylesheet" href="../static/advanced_mode_style.css">
-    <link rel="stylesheet" href="../static/rx_style.css">
+    <link rel="stylesheet" href="../static/styles/main_style.css">
+    <link rel="stylesheet" href="../static/styles/advanced_mode_style.css">
+    <link rel="stylesheet" href="../static/styles/rx_style.css">
 
     <script type="text/javascript">
       if ('{{ success }}') {
