--- a/virtualscanner/coms/coms_ui/templates/tx.html
+++ b/virtualscanner/coms/coms_ui/templates/tx.html
@@ -44,9 +44,9 @@
 
 
     <!--CSS-->
-    <link rel="stylesheet" href="../static/main_style.css">
-    <link rel="stylesheet" href="../static/advanced_mode_style.css">
-    <link rel="stylesheet" href="../static/tx_style.css">
+    <link rel="stylesheet" href="../static/styles/main_style.css">
+    <link rel="stylesheet" href="../static/styles/advanced_mode_style.css">
+    <link rel="stylesheet" href="../static/styles/tx_style.css">
 
     <!--Customized JS-->
       <script type="text/javascript" src="../static/tx_func.js"></script>
