--- a/virtualscanner/coms/coms_ui/templates/register.html
+++ b/virtualscanner/coms/coms_ui/templates/register.html
@@ -48,8 +48,8 @@
 
 
     <!--CSS-->
-    <link rel="stylesheet" href="{{url_for('static',filename='main_style.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='register_style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/styles/main_style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/styles/register_style.css')}}">
 
     <!--jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
