--- a/virtualscanner/coms/coms_ui/templates/base_research.html
+++ b/virtualscanner/coms/coms_ui/templates/base_research.html
@@ -27,7 +27,7 @@
             <link rel="stylesheet" href="../static/styles/bootstrap.min.css"> <!-- Theme -->
 
 
-    <title>Virtual Scanner Tabletop</title>
+    <title>Virtual Scanner</title>
   </head>
 
 
@@ -101,13 +101,15 @@
 
 
           <!-- Sidebar and main content -->
-           <div class="row h-100 collapse g-0 d-flex collapsable-sidebar">
-
-              <div class="col p-0 h-100">
+<!--           <div class="row h-100 collapse g-0 d-flex collapsable-sidebar">-->
+        <div class="row h-100">
+            <div class="col h-100">
               {% block content %}
               {% endblock %}
               </div>
-    </div>
+        </div>
+
+<!--    </div>-->
 
 
 
