--- a/virtualscanner/coms/coms_ui/templates/research.html
+++ b/virtualscanner/coms/coms_ui/templates/research.html
@@ -1,15 +1,32 @@
 {% extends "base_research.html" %}
 {% block content %}
-    <div class="row h-100">
-        <div class="col-6 h-50">
-            <button class="btn btn-lg btn-light w-100">
+<div class="container-fluid vh-100">
+    <div class="row">
+        <div class="col-6 p-0">
+            <button class="btn btn-lg btn-primary btn-outline-light w-100">
                 <a class="nav-link" href="/research/sequence">Seq viewer</a>
             </button>
         </div>
-        <div class="col-6 h-50">
-            <button class="btn btn-lg btn-light w-100">
-                <a class="nav-link" href="/research/b0">B0</a></button>
+        <div class="col-6 p-0">
+            <button class="btn btn-lg btn-primary btn-outline-light w-100">
+                <a class="nav-link" href="/research/simulate">Simulator</a></button>
         </div>
 
     </div>
+    <div class="row">
+        <div class="col-4 p-0">
+             <button class="btn btn-lg btn-primary btn-outline-light w-100">
+                 <a class="nav-link" href="/research/b0">B0</a></button>
+        </div>
+        <div class="col-4 p-0">
+             <button class="btn btn-lg btn-light w-100 disabled">
+                 <a class="nav-link" href="/research/grad">Gradients</a></button>
+        </div>
+        <div class="col-4 p-0">
+             <button class="btn btn-lg btn-light w-100 disabled">
+                 <a class="nav-link" href="/research/rf">RF</a></button>
+        </div>
+    </div>
+
+</div>
 {% endblock %}
