--- a/virtualscanner/coms/coms_ui/templates/research.html
+++ b/virtualscanner/coms/coms_ui/templates/research.html
@@ -23,7 +23,7 @@
                  <a class="nav-link" href="/research/grad">Gradients</a></button>
         </div>
         <div class="col-4 p-0">
-             <button class="btn btn-lg btn-light w-100 disabled">
+             <button class="btn btn-lg btn-primary w-100">
                  <a class="nav-link" href="/research/rf">RF</a></button>
         </div>
     </div>
