--- a/virtualscanner/coms/coms_ui/templates/rf.html
+++ b/virtualscanner/coms/coms_ui/templates/rf.html
@@ -89,8 +89,15 @@
             </div>
         </div>
         <div class="card">
+            <div class="card-header">
+                Code
+            </div>
             <div class="card-body">
-                Message board
+                <div class="form-outline">
+                  <textarea class="form-control disabled text-info" id="rf-code-area" rows="4">
+                  </textarea>
+                  <label class="form-label" for="rf-code-area"></label>
+                </div>
             </div>
         </div>
     </div>
